CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(OpenCLRaycaster)

set(CMAKE_MACOSX_RPATH 1)

# FIND_PACKAGE(CUDA REQUIRED)
# FIND_PACKAGE(JNI REQUIRED)

INCLUDE(FindOpenCL)
INCLUDE(FindJNI)

INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})

FILE(GLOB SOURCES "*.cpp")

# https://stackoverflow.com/questions/14172856/cmake-compile-with-mt-instead-of-md
set(CompilerFlags
	CMAKE_CXX_FLAGS
	CMAKE_CXX_FLAGS_DEBUG
	CMAKE_CXX_FLAGS_RELEASE
	CMAKE_C_FLAGS
	CMAKE_C_FLAGS_DEBUG
	CMAKE_C_FLAGS_RELEASE
	)
foreach(CompilerFlag ${CompilerFlags})
	string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
endforeach()

# CUDA_ADD_LIBRARY(CudaRaycaster ${SOURCES} SHARED)
ADD_LIBRARY(OpenCLRaycaster SHARED ${SOURCES})

IF(APPLE)
	SET_TARGET_PROPERTIES(OpenCLRaycaster PROPERTIES SUFFIX ".jnilib")
ENDIF()

TARGET_LINK_LIBRARIES(OpenCLRaycaster ${JNI_LIBRARIES} ${OpenCL_LIBRARIES})


